--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,33 +17,21 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install stable toolchain
-        id: install-rust
-        uses: actions-rs/toolchain@v1
+        # This uses the version specified in rust-toolchain.toml by default
+        uses: IronCoreLabs/rust-toolchain@v1
         with:
-          profile: minimal
-          # Set Rust version here!
-          toolchain: 1.69.0
-          override: true
-          components: rustfmt, clippy
+          components: clippy, rust-docs
 
-      - name: Install nightly toolchain
-        id: install-rust-nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          profile: minimal
-          components: rustfmt
+      - name: Install nightly toolchain (for rustfmt only)
+        run: rustup toolchain install nightly --profile minimal --component rustfmt
+
+      - name: Install cargo-make (fast!)
+        uses: davidB/rust-cargo-make@v1
 
       # Caching for Rust files. Must be called after installing Rust toolchain.
       # See https://github.com/Swatinem/rust-cache for more information.
-      - name: Set Up Cache
+      - name: Cache Rust files
         uses: Swatinem/rust-cache@v2
-
-      - name: Install cargo-make
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: --debug cargo-make
 
       - name: Run full CI (fmt, clippy, build, test, doctest, docs)
         run: cargo make ci
