Fix ignored tests to use latest rust version

--- a/.github/workflows/ignored_tests.yml
+++ b/.github/workflows/ignored_tests.yml
@@ -12,15 +12,10 @@ jobs:
     name: ignored tests
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          # Set Rust version here!
-          toolchain: 1.69.0
-          override: true
+        uses: IronCoreLabs/rust-toolchain@v1
 
       # Caching for Rust files. Must be called after installing Rust toolchain.
       # See https://github.com/Swatinem/rust-cache for more information.
